[package]
name = "pretty_env_logger"
version = "0.4.0" # don't forget to update html_root_url
description = "a visually pretty env_logger"
repository = "https://github.com/seanmonstar/pretty-env-logger"
authors = ["Sean McArthur <sean@seanmonstar>"]
license = "MIT/Apache-2.0"
categories = ["development-tools::debugging"]
keywords = ["log", "logger", "logging"]
readme = "README.md"

include = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "src/**/*"
]

[dependencies]
env_logger = { git = "https://github.com/TilCreator/env_logger", rev = "6cfa0d9b20532228a56fdabfd1048c3bdce75648" }
log = "0.4"
